--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,15 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+        <groupId>com.tektak.iloop.rmodel</groupId>
+        <artifactId>rmodel</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.31</version>
+        </dependency>
     </dependencies>
 </project>
