--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
             <version>3.1.0</version>
         </dependency>
         <dependency>
-        <groupId>com.tektak.iloop.rmodel</groupId>
-        <artifactId>rmodel</artifactId>
-        <version>1.0-SNAPSHOT</version>
+            <groupId>com.tektak.iloop.rmodel</groupId>
+            <artifactId>rmodel</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -31,6 +31,21 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
         </dependency>
     </dependencies>
 </project>
