--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,4 +20,8 @@
         <servlet-name>ActivityLogServlet</servlet-name>
         <url-pattern>/activitylog</url-pattern>
     </servlet-mapping>-->
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>com.tektak.iloop.rm.servlet.LogoutServlet</servlet-class>
+    </servlet>
 </web-app>
