added session class and logReportParameter datamodel

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -4,3 +4,9 @@ dbName=rmmodel
 username=root
 password=tektak
 driver=com.mysql.jdbc.Driver
+
+#log message
+login=login successful!!
+addUser=User added successfully!!
+update=User updated successfully!!
+delete=User deleted successfully!!
