All test cases are improved and added datamodel for user role

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -10,3 +10,12 @@ login=login successful!!
 addUser=User added successfully!!
 update=User updated successfully!!
 delete=User deleted successfully!!
+
+#exceptions
+common=Internal Server Connection
+sql=Database Connectivity Problem
+base=Application Corrupted
+config=System Configuration Error
+database=Database Connectivity Problem
+servlet=Application Corrupted
+io=Input Output Exception
